<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_parking_log"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/parking_log" />
        <item
            android:id="@+id/menu_account_settings"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/account_settings" />
        <item
            android:id="@+id/menu_preferences"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/preferences" />
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout" />
    </group>

</menu>
